--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
-		
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- Bootstrap CSS -->
         <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
 		
@@ -48,19 +48,19 @@
     <div id="root"></div>
    
      <!-- Jquery -->
-     <script src="./../../js/jquery.min.js" type="text/javascript"></script>
+     <!-- <script src="./../../js/jquery.min.js" type="text/javascript"></script> -->
      <!-- Bootstrap JS -->
-     <script src="./../../js/bootstrap.min.js" type="text/javascript"></script>
+     <!-- <script src="./../../js/bootstrap.min.js" type="text/javascript"></script> -->
      <!-- Modernizer JS -->
-     <script src="./../../js/modernizr.min.js" type="text/javascript"></script>
+     <!-- <script src="./../../js/modernizr.min.js" type="text/javascript"></script> -->
      <!-- Tromas JS -->
-     <script src="./../../js/tromas.js" type="text/javascript"></script>
+     <!-- <script src="./../../js/tromas.js" type="text/javascript"></script> -->
      <!-- Tromas Plugins -->
-     <script src="./../../js/theme-plugins.js" type="text/javascript"></script>
+     <!-- <script src="./../../js/theme-plugins.js" type="text/javascript"></script> -->
      <!-- Google Map JS -->
-     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnhgNBg6jrSuqhTeKKEFDWI0_5fZLx0vM" type="text/javascript"></script>	
-     <script src="./../../js/gmap.min.js"  type="text/javascript" ></script>
+     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnhgNBg6jrSuqhTeKKEFDWI0_5fZLx0vM" type="text/javascript"></script>	 -->
+     <!-- <script src="./../../js/gmap.min.js"  type="text/javascript" ></script> -->
      <!-- Main JS -->
-     <script src="./../../js/main.js" type="text/javascript"></script> */}
+     <!-- <script src="./../../js/main.js" type="text/javascript"></script>  -->
   </body>
 </html>
